force-app/main/default/objects/Recruit__c/Recruit__c.object-meta.xml
<CustomObject>
    <label>Recruit</label>
    <nameField>
        <label>Recruit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>