force-app/main/default/objects/Recruit__c/fields/Current_Mortgage_Company__c.field-meta.xml
<CustomField>
    <fullName>Current_Mortgage_Company__c</fullName>
    <label>Current Mortgage Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>