force-app/main/default/objects/Recruit__c/fields/NMLS__c.field-meta.xml
<CustomField>
    <fullName>NMLS__c</fullName>
    <label>NMLS #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>