force-app/main/default/objects/Recruit__c/fields/Other_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Other_Breakdown__c</fullName>
    <label>Other Breakdown</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>