force-app/main/default/objects/Recruit__c/fields/Refinance__c.field-meta.xml
<CustomField>
    <fullName>Refinance__c</fullName>
    <label>Refinance</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>