force-app/main/default/objects/Recruit__c/fields/Units_last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Units_last_12_Months__c</fullName>
    <label>Units last 12 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>