force-app/main/default/objects/Recruit__c/fields/Volume_last_3_Months__c.field-meta.xml
<CustomField>
    <fullName>Volume_last_3_Months__c</fullName>
    <label>Volume last 3 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>