force-app/main/default/objects/Recruit__c/listViews/Realtor_Recruits.listView-meta.xml
<ListView>
    <fullName>Realtor_Recruits</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Title__c</columns>
    <columns>Cell_Phone__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Cell_Phone__c</field>
        <operation>notContain</operation>
        <value>nurture</value>
    </filters>
    <label>Realtor Recruits</label>
</ListView>